--- a/prodotti.html
+++ b/prodotti.html
@@ -152,9 +152,9 @@
                           <img src="img/dunk_high.jpg" class="card-img-top" alt="...">
                         </a>
                           <div class="card-body">
-                              <h5 class="card-title">Jordan 1 Retro High OG</h5>
-                              <p class="card-text">Chicago Lost and Found</p>
-                              <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                              <h5 class="card-title">Nike Dunk High</h5>
+                              <p class="card-text">Panda Black White</p>
+                              <p class="card-text"><strong>Prezzo:</strong> €109,99</p>
                               <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                           </div>                    
                       </div>
