--- a/prodotti.html
+++ b/prodotti.html
@@ -124,9 +124,9 @@
                       <img src="img/air_max_1.jpg" class="card-img-top" alt="...">
                     </a>
                       <div class="card-body">
-                          <h5 class="card-title">Jordan 1 Retro High OG</h5>
-                          <p class="card-text">Chicago Lost and Found</p>
-                          <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                          <h5 class="card-title">Nike Air Max 1 '86 OG</h5>
+                          <p class="card-text">Big Bubble Sport Red</p>
+                          <p class="card-text"><strong>Prezzo:</strong> €199,99</p>
                           <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                       </div>                    
                   </div>
@@ -138,9 +138,9 @@
                         <img src="img/dunk_low.jpg" class="card-img-top" alt="...">
                       </a>
                         <div class="card-body">
-                            <h5 class="card-title">Jordan 1 Retro High OG</h5>
-                            <p class="card-text">Chicago Lost and Found</p>
-                            <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                            <h5 class="card-title">Nike Dunk Low Retro</h5>
+                            <p class="card-text">Panda Black White</p>
+                            <p class="card-text"><strong>Prezzo:</strong> €109,99</p>
                             <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                         </div>                    
                     </div>
