--- a/prodotti.html
+++ b/prodotti.html
@@ -133,7 +133,7 @@
                   </div>
               </div>
              
-                <div class="col" id="bordi">
+                <div class="col">
                     <div class="card h-100">
                       <a href="prodotto.html">
                         <img src="img/dunk_low.jpg" class="card-img-top" alt="...">
