--- a/contatti.html
+++ b/contatti.html
@@ -51,6 +51,11 @@
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
     </img>
   </center>
+  <div class="container text-center">
+    <p>&copy; SNEAKERSITE Milano</p>
+    <p>info@sneakersite - 0321456789</p>
+    <p>@alessandroferrari</p>
+  </div>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
