--- a/contatti.html
+++ b/contatti.html
@@ -58,7 +58,7 @@
   </div>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
-      <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
+      <p>SNEAKERSITE - Tutti i diritti riservati</p>
       <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
       <p>@alessandroferrari</p>
     </div>
