--- a/contatti.html
+++ b/contatti.html
@@ -52,13 +52,20 @@
     </img>
   </center>
   <div class="container text-center">
-    <p>&copy; SNEAKERSITE Novara</p>
+    <p>SNEAKERSITE Novara</p>
+    <p>C.so Italia 1</p>
     <p>info@sneakersite - 0321456789</p>
-    <p>@alessandroferrari</p>
   </div>
+  <center>
+    <div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2798.854587066455!2d8.6137757!3d45.4525863!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47865a24573b9d29%3A0x5064224377bd31e3!2sVia%20Costantino%20Porta%2C%2025%2C%2028100%20Novara%20NO!5e0!3m2!1sen!2sit!4v1654440794287!5m2!1sen!2sit"
+    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
+    </center>
+    </div>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
-      <p>SNEAKERSITE - Tutti i diritti riservati</p>
+      <p>&copy;SNEAKERSITE - Tutti i diritti riservati</p>
       <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
+      <p>@alessandroferrari</p>
     </div>
   </footer>
