--- a/prodotti.html
+++ b/prodotti.html
@@ -83,6 +83,7 @@
         <hr>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
+              <div style="margin-bottom 25px">
                 <div class="card h-100">
                   <a href="prodotto.html">
                     <img src="img/chicago.jpg" class="card-img-top" alt="...">
