--- a/prodotti.html
+++ b/prodotti.html
@@ -95,6 +95,7 @@
                         <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                     </div>                    
                 </div>
+              </div>
             </div>
             <div class="col">
                 <div class="card h-100">
