--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Sito realizzato con l'aiuto di ChatGPT richiedendo la crittura di una pagina ecommerce in html>
+<!-- Sito realizzato con l'aiuto di ChatGPT richiedendo la crittura di una pagina ecommerce in html-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
