--- a/carrello.html
+++ b/carrello.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<!-- Sito realizzato con l'aiuto di ChatGPT richiedendo la crittura di una pagina ecommerce in html>
+<!-- Sito realizzato con l'aiuto di ChatGPT richiedendo la crittura di una pagina ecommerce in html-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
