--- a/contatti.html
+++ b/contatti.html
@@ -64,9 +64,11 @@
     </center>
     </div>
   <footer class="bg-dark text-light py-3">
+    <div class="footer">
     <div class="container text-center">
       <p>&copy;SNEAKERSITE - Tutti i diritti riservati</p>
       <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
       <p>@alessandroferrari</p>
+    </div>
     </div>
   </footer>
