--- a/contatti.html
+++ b/contatti.html
@@ -63,6 +63,7 @@
     allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
     </center>
     </div>
+</body>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy;SNEAKERSITE - Tutti i diritti riservati</p>
