--- a/chisiamo.html
+++ b/chisiamo.html
@@ -52,6 +52,9 @@
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
     </img>
   </center>
+  <div class="container text-center">
+    <p>SNEAKERSITE è un azienda Novarese, esperta nel mondo delle sneakers e del resell. SNEAKERSITE è un azienda nuovissima in questo campo ma con i massimi esperti al suo interno per offrire sempre un servizio di qualità al cliente. Se hai richieste particolari o cerchi un prodotto non presente sul nostro sito web non esitare a contattarci. </p>
+  </div>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
