--- a/carrello.html
+++ b/carrello.html
@@ -53,6 +53,7 @@
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
     </img>
   </center>
+</body>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
@@ -60,3 +61,5 @@
       <p>@alessandroferrari</p>
     </div>
   </footer>
+
+  </html>
