--- a/prodotti.html
+++ b/prodotti.html
@@ -103,6 +103,7 @@
             <div class="col">
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
+                  <a href="prodotto.html">
                     <img src="img/zebra.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
@@ -116,6 +117,7 @@
             <div class="col">
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
+                  <a href="prodotto.html">
                     <img src="img/air-force.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Force 1</h5>
