--- a/contatti.html
+++ b/contatti.html
@@ -62,6 +62,8 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d349.8938006935685!2d8.621467315798567!3d45.446625171745254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47865a2072f2ea17%3A0x9189b813167445ae!2sCorso%20Italia%2C%201%2C%2028100%20Novara%20NO!5e0!3m2!1sit!2sit!4v1683894394081!5m2!1sit!2sit"
       allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
       </center>
+  </div>
+</div>
 </body>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
