--- a/index.html
+++ b/index.html
@@ -94,12 +94,14 @@
                   <a class="nav-link" href="contatti.html">Contatti</a>
               
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="carrello.html">Carrello</a>
+              
+                </li>
               </ul>
             </div>
             <div>
-              <a class="nav-link" href="carrello.html"><span style="width: 200px; height:100px; border-radius: 1px; border: 1px solid black; padding: 4px; background-color: dodgerblue; color:white" id="carrello">0</span>
-                <div id= "carrelo">
-                  <i class="fa-solid fa-cart-shopping" style="color: #1389fd;"></i>
+              <a class="nav-link" href="carrello.html">
                 </div>
               </a>
             </div>
