--- a/prodotti.html
+++ b/prodotti.html
@@ -88,7 +88,7 @@
             <div class="col">
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
-                  <a href="prodotto.html">
+                  <a href="jordan.html">
                     <img src="img/chicago.jpg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
