--- a/index.html
+++ b/index.html
@@ -103,10 +103,8 @@
           </div>
         </div>
         <div class="container text-center">
-          <center>
-          <img src="img/LOGO.png" style="height: 85px; margin-top: 5px; margin-bottom: 5px">
+          <img src="img/LOGO.png" style="height: 85px; margin-top: 5px; margin-bottom: 5px; margin-right: 150px">
         </img>
-      </center>
       </nav>
     </header>
 
