--- a/jordan.html
+++ b/jordan.html
@@ -54,7 +54,37 @@
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
     </img>
   </center>
-    
+  <main>
+    <div class="container">
+      <div class="grid second-nav">
+        <div class="column-xs-12">
+        </div>
+      </div>
+      <div class="grid product">
+        <div class="column-xs-12 column-md-7">
+          <div class="product-gallery">
+            <div class="product-image">
+              <img class="active" src="https://source.unsplash.com/W1yjvf5idqA">
+            </div>
+            <ul class="image-list">
+              <li class="image-item"><img src="https://source.unsplash.com/W1yjvf5idqA"></li>
+              <li class="image-item"><img src="https://source.unsplash.com/VgbUxvW3gS4"></li>
+              <li class="image-item"><img src="https://source.unsplash.com/5WbYFH0kf_8"></li>
+            </ul>
+          </div>
+        </div>
+        <div class="column-xs-12 column-md-5">
+          <h1>Jordan 1 Retro High OG</h1>
+          <h2>€349,99</h2>
+          <div class="description">
+            <p>Chicago Lost and Found</p>
+            
+          </div>
+          <button class="add-to-cart">Aggiungi al carrello</button>
+        </div>
+      </div>
+    </div>
+  </main>
   </div>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
