--- a/jordan.html
+++ b/jordan.html
@@ -67,7 +67,7 @@
               <img class="active" src="https://source.unsplash.com/W1yjvf5idqA">
             </div>
             <ul class="image-list">
-              <li class="image-item"><img src="https://source.unsplash.com/W1yjvf5idqA"></li>
+              <li class="image-item"><img src="img/chicago.jpg"></li>
               <li class="image-item"><img src="https://source.unsplash.com/VgbUxvW3gS4"></li>
               <li class="image-item"><img src="https://source.unsplash.com/5WbYFH0kf_8"></li>
             </ul>
