--- a/jordan.html
+++ b/jordan.html
@@ -55,13 +55,6 @@
       </header>
     <main class="container my-5">
 
-   
-        <form>
-          <center>
-            <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
-          </img>
-        </center>
-        </form>
   <main class="container my-5">
     <div class="row">
       <div class="col-md-6">
@@ -86,9 +79,12 @@
 
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
-      <p>&copy; 2023 Il mio sito - Tutti i diritti riservati</p>
+      <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
+      <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
+      <p>@alessandroferrari</p>
     </div>
   </footer>
+
 
 <!-- Collegamento ai file JavaScript di Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
