--- a/jordan.html
+++ b/jordan.html
@@ -61,11 +61,9 @@
         <img src="https://via.placeholder.com/600x400" alt="Immagine di esempio" class="img-fluid">
       </div>
       <div class="col-md-6">
-        <h1 class="mb-4">Nome prodotto</h1>
-        <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis lacus nec ante sagittis
-          ultrices vel vitae justo. Fusce at erat neque. Nunc ultrices risus sed sapien faucibus, a elementum nibh
-          vestibulum. Sed ut metus nulla. Nulla in nisi in elit consectetur mollis. </p>
-        <h2 class="mb-3">Prezzo: €XX,XX</h2>
+        <h1 class="mb-4">Jordan 1 Retro High OG</h1>
+        <p class="mb-4">Chicago Lost and Found</p>
+        <h2 class="mb-3">Prezzo: €349,99</h2>
         <form>
           <div class="mb-3">
             <label for="quantita" class="form-label">Quantità:</label>
