--- a/jordan.html
+++ b/jordan.html
@@ -58,7 +58,7 @@
   <main class="container my-5">
     <div class="row">
       <div class="col-md-6">
-        <img src="https://via.placeholder.com/600x400" alt="Immagine di esempio" class="img-fluid">
+        <img src="img/chicago.jpg" alt="Immagine di esempio" class="img-fluid">
       </div>
       <div class="col-md-6">
         <h1 class="mb-4">Jordan 1 Retro High OG</h1>
