--- a/index.html
+++ b/index.html
@@ -105,7 +105,10 @@
           </div>
         </div>
         <div class="container text-center">
-          
+
+          <img src="img/LOGO.png" style="height: 85px; margin-top: 5px; margin-bottom: 5px; margin-right: 350px">
+        </img>
+
       </nav>
     </header>
     <center>
