--- a/index.html
+++ b/index.html
@@ -104,15 +104,11 @@
             </div>
           </div>
         </div>
-        <div class="container text-center">
-          <img src="img/LOGO.png" style="height: 85px; margin-top: 5px; margin-bottom: 5px">
-        </img>
 
       </nav>
     </header>
     <center>
-      <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
-    </img>
+      <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
   </center>
 
   <!-- Swiper -->
