--- a/chisiamo.html
+++ b/chisiamo.html
@@ -56,8 +56,7 @@
       
   <div class="container text-center">
     <center>
-      <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
-    </img>
+      <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
   </center>
     <p>SNEAKERSITE è un azienda Novarese, esperta nel mondo delle sneakers e del resell. SNEAKERSITE è un azienda nuovissima in questo campo ma con i massimi esperti al suo interno per offrire sempre un servizio di qualità al cliente. Se hai richieste particolari o cerchi un prodotto non presente sul nostro sito web non esitare a contattarci. </p>
   </div>
