--- a/jordan.html
+++ b/jordan.html
@@ -66,6 +66,12 @@
         <h2 class="mb-3">Prezzo: €349,99</h2>
         <form>
           <div class="mb-3">
+          <select class="form-select" aria-label="Default select example">
+          <option selected>Open this select menu</option>
+          <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option>
+        </select>
             <label for="quantita" class="form-label">Quantità:</label>
             <input type="number" class="form-control" id="quantita" min="1" value="1">
           </div>
