--- a/jordan.html
+++ b/jordan.html
@@ -66,6 +66,7 @@
         <h2 class="mb-3">Prezzo: €349,99</h2>
         <form>
           <div class="mb-3">
+          <label for="taglia" class="form-label">Taglia:</label>
           <select class="form-select" aria-label="Default select example">
           <option selected>Open this select menu</option>
           <option value="1">One</option>
