--- a/jordan.html
+++ b/jordan.html
@@ -69,9 +69,14 @@
           <label for="taglia" class="form-label">Taglia:</label>
           <select class="form-select" aria-label="Default select example">
           <option selected>Open this select menu</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
+          <option value="1">EU 39 / US 6.5 / UK 6</option>
+          <option value="2">EU 40 / US 7 / UK 6.5</option>
+          <option value="3">EU 41 / US 8 / UK 7.5</option>
+          <option value="4">EU 42 / US 8.5 / UK 8</option>
+          <option value="5">EU 43 / US 9.5 / UK 9</option>
+          <option value="6">EU 44 / US 10 / UK 9.5</option>
+          <option value="7">EU 45 / US 11 / UK 10.5</option>
+          <option value="8">EU 46 / US 12 / UK 11.5</option>
         </select>
             <label for="quantita" class="form-label">Quantità:</label>
             <input type="number" class="form-control" id="quantita" min="1" value="1">
