--- a/jordan.html
+++ b/jordan.html
@@ -61,7 +61,7 @@
           <div class="mb-3">
           <label for="taglia" class="form-label">Taglia:</label>
           <select class="form-select" aria-label="Default select example">
-          <option selected>Open this select menu</option>
+          <option selected>Seleziona la tua taglia</option>
           <option value="1">EU 39 / US 6.5 / UK 6</option>
           <option value="2">EU 40 / US 7 / UK 6.5</option>
           <option value="3">EU 41 / US 8 / UK 7.5</option>
