--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <center>
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
   </center>
-
+  <a href="jordan.html">
   <!-- Swiper -->
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
@@ -134,6 +134,7 @@
       <span></span>
     </div>
   </div>
+</a>
 
 </div>
 
