--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
                   <a class="nav-link" href="carrello.html">Carrello</a>
               
                 </li>
+
+                <div class="boxcarrello">
+                  <a href="carrello.html"><i class="fa fa-shopping-cart" style="font-size:25px; color: white;"></i> <span style="font-size: 20px;  padding: 4px;  color:white" id="carrello">0</span></a>
+               </div>
+             
+                </div>
+                </nav>
+              </div>
+            </header>
               </ul>
             </div>
           </div>
