--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </li>
 
                 <div class="boxcarrello">
-                  <a href="carrello.html"><i class="fa fa-shopping-cart" style="font-size:25px; color: white;"></i> <span style="font-size: 20px;  padding: 4px;  color:white" id="carrello">0</span></a>
+                  <a href="carrello.html"><i class="fa fa-shopping-cart" style="font-size:25px; color: white;"></i> <span style="font-size: 20px;  padding: 4px;  color:#2D407A" id="carrello">0</span></a>
                </div>
              
                 </div>
