--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
             <center>
               <div class="logo">
-                <img src="img/ICONA.png" class="fotografia">
+                <img src="img/ICONA.png" class="fotografia" style="height:100px">
               </div>
               </center>
             
