--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                   <a class="nav-link" href="contatti.html">Contatti</a>
 
                 <div class="boxcarrello">
-                  <a href="carrello.html"><i class="fa fa-shopping-cart" style="font-size:25px; color: #2D407A; margin-fixer:right"></i> <span style="font-size: 20px;  padding: 4px;  color:#2D407A" id="carrello">0</span></a>
+                  <a href="carrello.html"><i class="fa fa-shopping-cart" style="font-size:25px; color: #2D407A; margin-fixed:right"></i> <span style="font-size: 20px;  padding: 4px;  color:#2D407A" id="carrello">0</span></a>
                </div>
              
                 </div>
