--- a/prodotti.html
+++ b/prodotti.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="chisiamo.html">Chi siamo</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="prodotti.html">Prodotti</a>
+                <a class="nav-link active" href="prodotti.html">Prodotti</a>
               </li>
               <li class="nav-item">
                 
