--- a/contatti.html
+++ b/contatti.html
@@ -42,7 +42,7 @@
                 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contatti.html">Contatti</a>
+                <a class="nav-link active" href="contatti.html">Contatti</a>
               </li>
               </div>
               <div class="boxcarrello">
