--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </nav>
     </header>
     <center>
-      <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
+      <img src="img/SCRITTA.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
   </center>
 
   <!-- Swiper -->
