--- a/carrello.html
+++ b/carrello.html
@@ -60,7 +60,7 @@
     </nav>
   </header>
   <center>
-    <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px"/>
+    <img src="img/SCRITTA.png" style="height: 25px; margin-top: 50px; margin-bottom: 50px"/>
 </center>
   <footer class="bg-dark text-light py-3">
     <div class="container text-center">
