--- a/index.html
+++ b/index.html
@@ -145,6 +145,54 @@
     </div>
   </div>
 
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="spaziaturaprodotti">
+        <div class="card h-100">
+          <a href="jordan.html">
+            <img src="img/chicago.jpg" class="card-img-top" alt="...">
+          </a>
+            <div class="card-body">
+                <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                <p class="card-text">Chicago Lost and Found</p>
+                <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+            </div>                    
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="spaziaturaprodotti">
+        <div class="card h-100">
+          <a href="prodotto.html">
+            <img src="img/zebra.jpg" class="card-img-top" alt="...">
+          </a>
+            <div class="card-body">
+                <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
+                <p class="card-text">Zebra (2017/2022)</p>
+                <p class="card-text"><strong>Prezzo:</strong> €419,99</p>
+                <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="spaziaturaprodotti">
+        <div class="card h-100">
+          <a href="prodotto.html">
+            <img src="img/air-force.jpg" class="card-img-top" alt="...">
+          </a>
+            <div class="card-body">
+                <h5 class="card-title">Nike Air Force 1</h5>
+                <p class="card-text">Air Force 1 Low '07</p>
+                <p class="card-text"><strong>Prezzo:</strong> €119,99</p>
+                <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+            </div>
+        </div>
+      </div>
+    </div>
+</div>
+
 </div>
 
   
