--- a/prodotti.html
+++ b/prodotti.html
@@ -74,7 +74,7 @@
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
                         <p class="card-text">Chicago Lost and Found</p>
                         <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
-                        <a href="#2D407A" class="btn btn-primary">Aggiungi al carrello</a>
+                        <a href="#" style=color:#2D407A class="btn btn-primary">Aggiungi al carrello</a>
                     </div>                    
                 </div>
               </div>
