--- a/prodotti.html
+++ b/prodotti.html
@@ -70,11 +70,11 @@
                   <a href="jordan.html">
                     <img src="img/chicago.jpg" class="card-img-top" alt="...">
                   </a>
-                    <div class="card-body">
+                    <div class="card-body" color="#2D407A">
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
                         <p class="card-text">Chicago Lost and Found</p>
                         <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
-                        <a href="#" class="btn btn-primary" color="#2D407A" >Aggiungi al carrello</a>
+                        <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                     </div>                    
                 </div>
               </div>
