--- a/prodotti.html
+++ b/prodotti.html
@@ -70,7 +70,7 @@
                   <a href="jordan.html">
                     <img src="img/chicago.jpg" class="card-img-top" alt="...">
                   </a>
-                    <div class="card-body" color="#2D407A">
+                    <div class="card-body" style= "color: #2D407A;">
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
                         <p class="card-text">Chicago Lost and Found</p>
                         <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
