--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       <div class="spaziaturaprodotti">
         <div class="card h-100">
           <a href="jordan.html">
-            <img src="img/chicago.jpg" class="card-img-top" alt="...">
+            <img src="img/chicago_short.jpg" class="card-img-top" alt="...">
           </a>
             <div class="card-body">
                 <h5 class="card-title">Jordan 1 Retro High OG</h5>
@@ -165,7 +165,7 @@
       <div class="spaziaturaprodotti">
         <div class="card h-100">
           <a href="prodotto.html">
-            <img src="img/zebra.jpg" class="card-img-top" alt="...">
+            <img src="img/zebra_short.jpg" class="card-img-top" alt="...">
           </a>
             <div class="card-body">
                 <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
@@ -180,7 +180,7 @@
       <div class="spaziaturaprodotti">
         <div class="card h-100">
           <a href="prodotto.html">
-            <img src="img/air-force.jpg" class="card-img-top" alt="...">
+            <img src="img/air-force_short.jpg" class="card-img-top" alt="...">
           </a>
             <div class="card-body">
                 <h5 class="card-title">Nike Air Force 1</h5>
