--- a/prodotti.html
+++ b/prodotti.html
@@ -68,7 +68,7 @@
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
                   <a href="jordan.html">
-                    <img src="img/chicago.jpg" class="card-img-top" alt="...">
+                    <img src="img/chicago_short.jpg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
@@ -83,7 +83,7 @@
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
                   <a href="prodotto.html">
-                    <img src="img/zebra.jpg" class="card-img-top" alt="...">
+                    <img src="img/zebra_short.jpg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
@@ -98,7 +98,7 @@
               <div class="spaziaturaprodotti">
                 <div class="card h-100">
                   <a href="prodotto.html">
-                    <img src="img/air-force.jpg" class="card-img-top" alt="...">
+                    <img src="img/air-force_short.jpg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Force 1</h5>
@@ -115,7 +115,7 @@
                 <div class="spaziaturaprodotti">
                   <div class="card h-100">
                     <a href="prodotto.html">
-                      <img src="img/air_max_1.jpg" class="card-img-top" alt="...">
+                      <img src="img/air_max_1_short.jpg" class="card-img-top" alt="...">
                     </a>
                       <div class="card-body">
                           <h5 class="card-title">Nike Air Max 1 '86 OG</h5>
@@ -131,7 +131,7 @@
                   <div class="spaziaturaprodotti">
                     <div class="card h-100">
                       <a href="prodotto.html">
-                        <img src="img/dunk_low.jpg" class="card-img-top" alt="...">
+                        <img src="img/dunk_low_short.jpg" class="card-img-top" alt="...">
                       </a>
                         <div class="card-body">
                             <h5 class="card-title">Nike Dunk Low Retro</h5>
@@ -147,7 +147,7 @@
                     <div class="spaziaturaprodotti">
                       <div class="card h-100">
                         <a href="prodotto.html">
-                          <img src="img/dunk_high.jpg" class="card-img-top" alt="...">
+                          <img src="img/dunk_high_short.jpg" class="card-img-top" alt="...">
                         </a>
                           <div class="card-body">
                               <h5 class="card-title">Nike Dunk High</h5>
@@ -164,7 +164,7 @@
                       <div class="spaziaturaprodotti">
                         <div class="card h-100">
                           <a href="prodotto.html">
-                            <img src="img/jordan_4.jpg" class="card-img-top" alt="...">
+                            <img src="img/jordan_4_short.jpg" class="card-img-top" alt="...">
                           </a>
                             <div class="card-body">
                                 <h5 class="card-title">Jordan 4 Retro</h5>
@@ -180,7 +180,7 @@
                         <div class="spaziaturaprodotti">
                           <div class="card h-100">
                             <a href="prodotto.html">
-                              <img src="img/new_balance.jpg" class="card-img-top" alt="...">
+                              <img src="img/new_balance_short.jpg" class="card-img-top" alt="...">
                             </a>
                               <div class="card-body">
                                   <h5 class="card-title">New Balance 550</h5>
@@ -196,7 +196,7 @@
                           <div class="spaziaturaprodotti">
                             <div class="card h-100">
                               <a href="prodotto.html">
-                                <img src="img/yeezy_rnnr.jpg" class="card-img-top" alt="...">
+                                <img src="img/yeezy_rnnr_short.jpg" class="card-img-top" alt="...">
                               </a>
                                 <div class="card-body">
                                     <h5 class="card-title">Adidas Yeezy Foam RNR</h5>
