--- a/contatti.html
+++ b/contatti.html
@@ -83,7 +83,7 @@
         <button name="Invia" type="submit" id="contact-submit" data-submit="...Sending">Invia</button>
       </fieldset>
     </form>
-   
+  </center>
     
   </div>
 </div>     
